# telegram-channel-forwarder-

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  SPECIFICATION.md  docker-compose.sqlite.yml  docker-compose.yml  pyproject.toml
src/app/: __init__.py  config.py  main.py
src/bot/: __init__.py  bot.py  messages.py  states.py
src/bot/handlers/: __init__.py  auth.py  decorators.py  destination.py  errors.py  monitoring.py  sources.py  start.py
src/bot/keyboards/: __init__.py  inline.py
src/bot/middlewares/: __init__.py  logging.py
src/mtproto/: __init__.py  client.py  session_manager.py
src/mtproto/handlers/: __init__.py  new_message.py
src/services/: __init__.py  auth_service.py  delivery_service.py  destination_service.py  forwarder_service.py  source_service.py
src/shared/: __init__.py  constants.py  exceptions.py
src/shared/utils/: __init__.py  crypto.py  validators.py
src/storage/: __init__.py  database.py
src/storage/models/: __init__.py  entities.py
src/storage/repositories/: __init__.py  base.py  delivery_repo.py  destination_repo.py  session_repo.py  source_repo.py  user_repo.py
src/workers/: __init__.py  session_monitor.py
tests/: conftest.py
tests/unit/: test_validators.py
